objects/Recordtype_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFID__c</fullName>
        <label>SFID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SObjectType__c</fullName>
        <label>SObjectType</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Recordtype Setting</label>
</CustomObject>